Update CV responsive

--- a/Cv.html
+++ b/Cv.html
@@ -29,14 +29,15 @@
                 </div>
             </div>
             <div class="content-header">
+                <div class="img-header">
+                    <img src="./img/headerr.png" alt="">
+                </div>
                 <div class="text-header">
                     <p>UI/UX/Video Creator</p>
                     <img src="./img/text-header.png" alt="">
                     <a href="mailto:Nhioliver00@gmail.com"><button type="button">Contact me</button></a>
                 </div>
-                <div class="img-header">
-                    <img src="./img/headerr.png" alt="">
-                </div>
+
             </div>
         </div>
     </div>
@@ -64,7 +65,7 @@
             <div class="expe-header">
                 <img src="./img/ExpericenceExper.png" alt="">
             </div>
-            <div class="container img-expe">
+            <div class="container img-expe md">
                 <div class="row logo-expe">
                     <div class="col logo-ex">
                         <img src="./img/pts.png" alt="">
@@ -76,23 +77,35 @@
                     </div>
                 </div>
             </div>
+            <div class="container img-expe xs">
+                <div class="row logo-expe">
+                    <div class="col logo-ex">
+                        <img src="./img/pts-xs.png" alt="">
+                        <img src="./img/premier-xs.png" alt="">
+                    </div>
+                    <div class="col logo-ex ">
+                        <img src="./img/figma-xs.png " alt="">
+                        <img src="./img/visual-xs.png " alt="">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-- screen 4 -->
-    <div class="screen4">
-        <div class="header-screen4">
-            <div class="container screen4-header">
-                <div class="row text-achie">
-                    <div class="col-8 text-achie-header">
-                        <img class="achie" src="./img/AchievementAchie.png" alt="">
-                        <img class="img-achie" src="./img/sch.png" alt="">
+    <div class="screen4 ">
+        <div class="header-screen4 ">
+            <div class="container screen4-header ">
+                <div class="row text-achie ">
+                    <div class="col-sm-8 text-achie-header ">
+                        <img class="achie " src="./img/AchievementAchie.png " alt=" ">
+                        <img class="img-achie " src="./img/sch.png " alt=" ">
                     </div>
-                    <div class="col-4 content-achie-header">
-                        <div class="content-achie">
+                    <div class="col-sm-4 content-achie-header ">
+                        <div class="content-achie ">
                             <b>Tốt nghiệp Đại học Mở Hà Nội</b>
                             <p>Chuyên ngành thiết kế đồ họa</p>
                         </div>
-                        <div class="content-achie">
+                        <div class="content-achie ">
                             <b>Giải 3 CEG Music Festival 2019</b>
                             <p>Giải triển vọng</p>
                         </div>
@@ -100,38 +113,38 @@
                 </div>
             </div>
         </div>
-        <div class="content-screen4">
-            <div class="img-achie">
-                <div class="timeline-header">
-                    <div class="container timeline-head">
-                        <img src="./img/timeline.png" alt="">
+        <div class="content-screen4 ">
+            <div class="img-achie ">
+                <div class="timeline-header ">
+                    <div class="container timeline-head ">
+                        <img src="./img/timeline.png " alt=" ">
                     </div>
-                    <div class="circle-radius">
-                        <div class="circle left" onclick="prev()"></div>
-                        <div class="circle right" onclick="next()"></div>
+                    <div class="circle-radius ">
+                        <div class="circle left " onclick="prev() "></div>
+                        <div class="circle right " onclick="next() "></div>
                     </div>
-                    <div class="vector">
-                        <img src="./img/Vector.png" alt="">
+                    <div class="vector ">
+                        <img src="./img/Vector.png " alt=" ">
                     </div>
                 </div>
-                <div class="container timeline-main">
-                    <div class="pd-img d-flex justify-contents-between">
-                        <div class="letter pd1">
-                            <div class="letter-content">
+                <div class="container timeline-main ">
+                    <div class="pd-img d-flex justify-contents-between ">
+                        <div class="letter pd1 ">
+                            <div class="letter-content ">
                                 <p>2016</p>
-                                <img src="./img/pd1.png" alt="">
-                                <div class="timeline year1">
+                                <img src="./img/pd1.png " alt=" ">
+                                <div class="timeline year1 ">
                                     <p>Attending Hanoi Open University</p>
                                     <p>Freelance singer</p>
                                 </div>
                             </div>
 
                         </div>
-                        <div class="letter pd2">
-                            <div class="letter-content">
+                        <div class="letter pd2 ">
+                            <div class="letter-content ">
                                 <p>2019</p>
-                                <img src="./img/pd2.png" alt="">
-                                <div class="timeline year2">
+                                <img src="./img/pd2.png " alt=" ">
+                                <div class="timeline year2 ">
                                     <p>Attending Hanoi Open University</p>
                                     <p>Producer tại Mavel Studio</p>
                                     <p>Freelance singer</p>
@@ -139,11 +152,11 @@
                             </div>
 
                         </div>
-                        <div class="letter pd3">
-                            <div class="letter-content">
+                        <div class="letter pd3 ">
+                            <div class="letter-content ">
                                 <p>2020</p>
-                                <img src="./img/pd3.png" alt="">
-                                <div class="timeline year3">
+                                <img src="./img/pd3.png " alt=" ">
+                                <div class="timeline year3 ">
                                     <p>Attending Hanoi Open University</p>
                                     <p>Producer tại Mavel Studio</p>
                                     <p>Influencers of facebook, youtube, model</p>
@@ -152,11 +165,11 @@
                             </div>
 
                         </div>
-                        <div class="letter pd4 active">
-                            <div class="letter-content">
+                        <div class="letter pd4 active ">
+                            <div class="letter-content ">
                                 <p>2021</p>
-                                <img src="./img/pd4.png" alt="">
-                                <div class="timeline year4">
+                                <img src="./img/pd4.png " alt=" ">
+                                <div class="timeline year4 ">
                                     <p>Graduated from Hanoi Open University</p>
                                     <p>Attending Funix FPT</p>
                                     <p>Producer tại Mavel Studio</p>
@@ -171,18 +184,18 @@
         </div>
     </div>
     <!-- screen 5 -->
-    <div class="screen5">
-        <div class="container screen5-header">
-            <div class="row project-header mb-5">
-                <img src="./img/Projectprọect.png" alt="">
+    <div class="screen5 ">
+        <div class="container screen5-header ">
+            <div class="row project-header mb-5 ">
+                <img src="./img/Projectprọect.png " alt=" ">
             </div>
             <div>
-                <a class="project-web d-flex" target="_blank" href="https://bebietbay.000webhostapp.com/">
-                    <span>Go to my personal project</span> <span class="arrow">⟶</span>
+                <a class="project-web d-flex " target="_blank " href="https://bebietbay.000webhostapp.com/ ">
+                    <span>Go to my personal project</span> <span class="arrow ">⟶</span>
                 </a>
             </div>
-            <div class="row project-main py-5">
-                <div class="col project-content">
+            <div class="row project-main py-5 ">
+                <div class="col project-content ">
                     <p>Kol/Beauty Bloger:</p>
                     <ul>
                         <li>Romand</li>
@@ -191,7 +204,7 @@
                         <li>Vivimoon</li>
                     </ul>
                 </div>
-                <div class="col project-content">
+                <div class="col project-content ">
                     <p>Tổ chức sự kiện âm nhạc:</p>
                     <ul>
                         <li>Nhà hàng Pizza Hut</li>
@@ -202,7 +215,7 @@
                         <li>...</li>
                     </ul>
                 </div>
-                <div class="col project-content">
+                <div class="col project-content ">
                     <p> Thiết kế:</p>
                     <ul>
                         <li>Banner</li>
@@ -215,21 +228,21 @@
         </div>
     </div>
     <!-- screen 6 -->
-    <div class="screen6">
-        <div class="box-thanks">
-            <div>
-                <img src="./img/thanks.png" alt="">
-                <a class="button-thanks-contact" href="mailto:Nhioliver00@gmail.com">
-                    <button>Contact me</button>
-                </a>
-            </div>
-        </div>
-        <div class="container screen6-content">
-            <div class="content-screen6">
-                <div class="control-screen6">
-                    <img class="text-thanks" src="./img/thankssfor.png" alt="">
+    <div class="screen6 ">
+        <div class="container screen6-content ">
+            <div class="content-screen6 ">
+                <div class="control-screen6 ">
+                    <img class="text-thanks " src="./img/thankssfor.png " alt=" ">
                 </div>
 
+            </div>
+        </div>
+        <div class="box-thanks ">
+            <div>
+                <img src="./img/thanks.png " alt=" ">
+                <a class="button-thanks-contact " href="mailto:Nhioliver00@gmail.com ">
+                    <button>Contact me</button>
+                </a>
             </div>
         </div>
     </div>
@@ -239,30 +252,30 @@
 
         function next() {
             //remove active
-            document.querySelector(".letter.active").classList.remove("active");
+            document.querySelector(".letter.active ").classList.remove("active ");
             switch (index) {
-                case document.querySelectorAll(".letter").length - 1:
+                case document.querySelectorAll(".letter ").length - 1:
                     index = 0;
                     break;
                 default:
                     ++index;
                     break;
             }
-            document.querySelectorAll(".letter")[index].classList.add("active");
+            document.querySelectorAll(".letter ")[index].classList.add("active ");
         }
 
         function prev() {
             //remove active
-            document.querySelector(".letter.active").classList.remove("active");
+            document.querySelector(".letter.active ").classList.remove("active ");
             switch (index) {
                 case 0:
-                    index = document.querySelectorAll(".letter").length - 1;
+                    index = document.querySelectorAll(".letter ").length - 1;
                     break;
                 default:
                     --index;
                     break;
             }
-            document.querySelectorAll(".letter")[index].classList.add("active");
+            document.querySelectorAll(".letter ")[index].classList.add("active ");
         }
     </script>
 </body>
