--- a/Cv.html
+++ b/Cv.html
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="content-screen4 ">
-            <div class="img-achie ">
+            <div>
                 <div class="timeline-header ">
                     <div class="container timeline-head ">
                         <img src="./img/timeline.png " alt=" ">
