--- a/Cv.html
+++ b/Cv.html
@@ -190,7 +190,7 @@
                 <img src="./img/Projectprọect.png " alt=" ">
             </div>
             <div>
-                <a class="project-web d-flex " target="_blank " href="https://bebietbay.000webhostapp.com/ ">
+                <a class="project-web d-flex " target="_blank " href="https://ngobaonhi.github.io/Genshin-Impact/index.html">
                     <span>Go to my personal project</span> <span class="arrow ">⟶</span>
                 </a>
             </div>
